[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/ui.gd" type="Script" id=1]
[ext_resource path="res://ui/tweet.tscn" type="PackedScene" id=2]
[ext_resource path="res://bullet/sprite.png" type="Texture" id=3]

[node name="root" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script = ExtResource( 1 )

[node name="panel" type="Panel" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 202.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="tweet_0" parent="panel" instance=ExtResource( 2 )]

margin_left = -2.0
margin_right = 38.0

[node name="tweet_1" parent="panel" instance=ExtResource( 2 )]

margin_left = 346.0
margin_top = 1.0
margin_right = 386.0
margin_bottom = 41.0
index = 1

[node name="tweet_2" parent="panel" instance=ExtResource( 2 )]

margin_left = 697.0
margin_top = 1.0
margin_right = 737.0
margin_bottom = 41.0
index = 2

[node name="marker_0" type="Sprite" parent="."]

position = Vector2( 264.323, 170.397 )
scale = Vector2( 0.503515, 0.503515 )
texture = ExtResource( 3 )

[node name="marker_1" type="Sprite" parent="."]

visible = false
position = Vector2( 610.488, 167.953 )
scale = Vector2( 0.503515, 0.503515 )
texture = ExtResource( 3 )

[node name="marker_2" type="Sprite" parent="."]

visible = false
position = Vector2( 943.621, 169.582 )
scale = Vector2( 0.503515, 0.503515 )
texture = ExtResource( 3 )


